# api_crud_fastapi

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py  router.py  schema.py
tests/: test.py  test_api.py
