[tool.poetry]
name = "api-crud-fastapi"
version = "0.1.0"
description = ""
authors = ["dslucasribeiro <dslucasribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.12.2"
pytest = "^8.0.1"
httpx = "^0.26.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn src.main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"